.env: compose: fix cloud network-id and point qrkey to mosquitto

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # Mari cloud settings
 CLOUD_MQTT_HOST=mosquitto
 CLOUD_MQTT_PORT=1883
+CLOUD_NETWORK_ID=12AA
 
 # QrKey settings
-MQTT_HOST=argus.paris.inria.fr
-MQTT_PORT=8883
-MQTT_WS_PORT=8884
-MQTT_USE_SSL=true
+MQTT_HOST=mosquitto
+MQTT_PORT=1883
+MQTT_WS_PORT=1884
+MQTT_USE_SSL=false
 PIN_CODE_REFRESH_INTERVAL=3600
-FRONTEND_BASE_URL=https://dotbots.github.io/PyDotBot
+FRONTEND_BASE_URL=http://localhost:8000/PyDotBot
