--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       - CLOUD_MQTT_HOST
       - CLOUD_MQTT_PORT
+      - CLOUD_NETWORK_ID
 
   mosquitto:
     image: eclipse-mosquitto:latest
